--- a/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/app-registry.adoc
@@ -10,6 +10,10 @@
 
 // fixme: source description is still missing, and a better description is needed
 
+== Default Values
+
+* App-Registry listens on port 9240 by default.
+
 == Configuration
 
 include::partial$deployment/services/env-and-yaml.adoc[]
