--- a/modules/ROOT/pages/deployment/services/s-list/ocdav.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/ocdav.adoc
@@ -11,6 +11,10 @@
 
 {description} For more details on CS3 see the xref:architecture/architecture.adoc#reva-and-cs3[REVA and CS3] description in the Architecture and Concepts section.
 
+== Default Values
+
+* OCDAV listens on port 9163 by default.
+
 == Sequence Diagram
 
 // https://github.com/owncloud/ocis/pull/3864
