--- a/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
@@ -1,6 +1,6 @@
 = Antivirus Service Configuration
 :toc: right
-:description: The Infinite Scale Antivirus service is responsible for scanning files for viruses.
+:description: The Infinite Scale antivirus service is responsible for scanning files for viruses.
 
 :ext_name: antivirus
 
@@ -17,22 +17,22 @@
 
 === Antivirus Scanner Type
 
-The antivirus service currently supports https://tools.ietf.org/html/rfc3507[icap] and http://www.clamav.net/index.html[clamav] as antivirus scanners. The `ANTIVIRUS_SCANNER_TYPE` environment variable is used to select the scanner. The detailed configuration for each scanner heavily depends on the scanner type selected. See the environment variables for more details.
+The antivirus service currently supports https://tools.ietf.org/html/rfc3507[ICAP] and http://www.clamav.net/index.html[clamAV] as antivirus scanners. The `ANTIVIRUS_SCANNER_TYPE` environment variable is used to select the scanner. The detailed configuration for each scanner heavily depends on the scanner type selected. See the environment variables for more details.
 
   -   For `icap`, only scanners using the `X-Infection-Found` header are currently supported.
   -   For `clamav` only local sockets can currently be configured.
 
 === Maximum Scan size
 
-Several factors can make it necessary to limit the maximum filesize the antivirus service will use for scanning. Use the `ANTIVIRUS_MAX_SCAN_SIZE` environment variable to scan only a given amount of bytes. Obviously it is recommended to scan the whole file, but several factors like scanner type and version, bandwith, performance issues, etc. might make a limit necessary.
+Several factors can make it necessary to limit the maximum file size the antivirus service will use for scanning. Use the `ANTIVIRUS_MAX_SCAN_SIZE` environment variable to scan only a given amount of bytes. Obviously it is recommended to scan the whole file, but several factors like scanner type and version, bandwith, performance issues, etc. might make a limit necessary.
 
 === Infected File Handling
 
 The antivirus service allows three different ways of handling infected files. Those can be set via the `ANTIVIRUS_INFECTED_FILE_HANDLING` environment variable:
 
-  -   *delete*: (default): Infected files will be deleted immediately, further postprocessing is cancelled.
-  -   *abort*:  (advanced option): Infected files will be kept, further postprocessing is cancelled. Files can be manually retrieved and inspected by an admin. To identify the file for further investigation, the antivirus service logs the abort/infected state including the file ID. The file is located in the `storage/users/uploads` folder of the ocis data directory and persists until it is manually deleted by the admin via the xref:{s-path}/storage-users.adoc#manage-unfinished-uploads[Manage Unfinished Uploads] command.
-  -   *continue*:  (obviously not recommended): Infected files will be marked via metadata as infected but postprocessing continues normally. Note: Infected Files are moved to their final destination and therefore not prevented from download which includes the risk of spreading viruses.
+  -   *delete*: (default): Infected files will be deleted immediately, further post-processing is cancelled.
+  -   *abort*:  (advanced option): Infected files will be kept, further post-processing is cancelled. Files can be manually retrieved and inspected by an admin. To identify the file for further investigation, the antivirus service logs the abort/infected state including the file ID. The file is located in the `storage/users/uploads` folder of the ocis data directory and persists until it is manually deleted by the admin via the xref:{s-path}/storage-users.adoc#manage-unfinished-uploads[Manage Unfinished Uploads] command.
+  -   *continue*:  (obviously not recommended): Infected files will be marked via metadata as infected but post-processing continues normally. Note: Infected Files are moved to their final destination and therefore not prevented from download which includes the risk of spreading viruses.
 
 In all cases, a log entry is added declaring the infection and handling method and a notification via the `userlog` service sent.
 
@@ -42,11 +42,11 @@ In case a scanner is not accessible by the antivirus service like a network outa
 
 == Operation Modes
 
-The antivirus service can scan files during `postprocessing`. `on demand` scanning is currently not available and might be added in a future release.
+The antivirus service can scan files during `post-processing`. `on demand` scanning is currently not available and might be added in a future release.
 
-=== Postprocessing
+=== Post-processing
 
-The antivirus service will scan files during postprocessing. It listens for a postprocessing step called `"virusscan"`. This step can be added in the environment variable `POSTPROCESSING_STEPS`. Read the documentation of the xref:{s-path}/postprocessing.adoc[postprocessing service] for more details.
+The antivirus service will scan files during post-processing. It listens for a post-processing step called `"virusscan"`. This step can be added in the environment variable `POSTPROCESSING_STEPS`. Read the documentation of the xref:{s-path}/postprocessing.adoc[postprocessing service] for more details.
 
 == Configuration
 
