--- a/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/antivirus.adoc
@@ -24,7 +24,7 @@ The antivirus service currently supports https://tools.ietf.org/html/rfc3507[ICA
 
 === Maximum Scan size
 
-Several factors can make it necessary to limit the maximum file size the antivirus service will use for scanning. Use the `ANTIVIRUS_MAX_SCAN_SIZE` environment variable to scan only a given amount of bytes. Obviously it is recommended to scan the whole file, but several factors like scanner type and version, bandwith, performance issues, etc. might make a limit necessary.
+Several factors can make it necessary to limit the maximum file size the antivirus service will use for scanning. Use the `ANTIVIRUS_MAX_SCAN_SIZE` environment variable to scan only a given amount of bytes. Obviously, it is recommended to scan the whole file, but several factors like scanner type and version, bandwith, performance issues, etc. might make a limit necessary.
 
 === Infected File Handling
 
@@ -36,9 +36,9 @@ The antivirus service allows three different ways of handling infected files. Th
 
 In all cases, a log entry is added declaring the infection and handling method and a notification via the `userlog` service sent.
 
-=== Scanner Inaccessability
+=== Scanner Inaccessibility
 
-In case a scanner is not accessible by the antivirus service like a network outage, service outage or hardware outage, the antivirus service uses the `abort` case for further processing, independent of the actual setting made. In any case, an error is logged noting the inaccessability of the scanner used.
+In case a scanner is not accessible by the antivirus service like a network outage, service outage or hardware outage, the antivirus service uses the `abort` case for further processing, independent of the actual setting made. In any case, an error is logged noting the inaccessibility of the scanner used.
 
 == Operation Modes
 
@@ -46,7 +46,7 @@ The antivirus service can scan files during `post-processing`. `on demand` scann
 
 === Post-processing
 
-The antivirus service will scan files during post-processing. It listens for a post-processing step called `"virusscan"`. This step can be added in the environment variable `POSTPROCESSING_STEPS`. Read the documentation of the xref:{s-path}/postprocessing.adoc[postprocessing service] for more details.
+The antivirus service will scan files during post-processing. It listens for a post-processing step called `virusscan`. This step can be added in the environment variable `POSTPROCESSING_STEPS`. Read the documentation of the xref:{s-path}/postprocessing.adoc[postprocessing service] for more details.
 
 == Configuration
 
