--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -240,6 +240,25 @@ ifdef::use_tab_3[]
 endif::[]
 |===
 
+=== Breaking changes
+
+==== Version 0.2.0
+
+Version 0.2.0 introduces some changes to the value names to align the service/app names at various places (values file, YAML files, directories).
+The following changes have been done in detail between 0.1.0 and 0.2.0:
+
+`configRefs.storageUsersConfigRef` -> `configRefs.storageusersConfigRef`
+`secretRefs.storageSystemJwtSecretRef` -> `secretRefs.storagesystemJwtSecretRef`
+`secretRefs.storageSystemSecretRef` -> `secretRefs.storagesystemSecretRef`
+`services.appProvider` -> `services.appprovider`
+`services.appRegistry` -> `services.appregistry`
+`services.authBasic` -> `services.authbasic`
+`services.authMachine` -> `services.authmachine`
+`services.storagePublicLink` -> `services.storagepubliclink`
+`services.storageShares` -> `services.storageshares`
+`services.storageSystem` -> `services.storagesystem`
+`services.storageUsers` -> `services.storageusers`
+
 === Get the Chart
 
 As the Helm chart has currently not been published to a Helm repository, you need to clone ownCloud's Helm chart git repository named {ocis-helm-charts-url}[ocis-charts].
