--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -231,33 +231,42 @@ See the following table to match the Helm chart versions with Infinite Scale rel
 
 ifdef::use_tab_2[]
 | {helm_tab_2_tab_text}
-| 2.0.0
+| 3.0.0-alpha
 endif::[]
 
 ifdef::use_tab_3[]
 | {helm_tab_3_tab_text}
-| 3.0.0 - 3.0.1
+| 2.0.0
 endif::[]
 |===
 
-=== Breaking changes
+=== Breaking Changes
 
-==== Version 0.2.0
+////
+* On each Helm Chart release, only the breaking-changes.adoc file MUST be maintained.
+* We can of course also state that one tab has no breaking change but in this case, this needs manual maintenance on each new version in this document too.
+////
 
-Version 0.2.0 introduces some changes to the value names to align the service/app names at various places (values file, YAML files, directories).
-The following changes have been done in detail between 0.1.0 and 0.2.0:
+Breaking changes are only published for Helm Chart versions that got released. Select from the tabs possible breaking changes between Helm Chart versions. A new document will open containing all the details.
 
-`configRefs.storageUsersConfigRef` -> `configRefs.storageusersConfigRef`
-`secretRefs.storageSystemJwtSecretRef` -> `secretRefs.storagesystemJwtSecretRef`
-`secretRefs.storageSystemSecretRef` -> `secretRefs.storagesystemSecretRef`
-`services.appProvider` -> `services.appprovider`
-`services.appRegistry` -> `services.appregistry`
-`services.authBasic` -> `services.authbasic`
-`services.authMachine` -> `services.authmachine`
-`services.storagePublicLink` -> `services.storagepubliclink`
-`services.storageShares` -> `services.storageshares`
-`services.storageSystem` -> `services.storagesystem`
-`services.storageUsers` -> `services.storageusers`
+[tabs]
+====
+ifdef::use_tab_2[]
+{helm_tab_2_tab_text}::
++
+--
+xref:deployment/container/orchestration/tab-pages/breaking-changes.adoc#{helm_tab_2_tab_text}[Breaking Changes,window=_blank]
+--
+endif::[]
+
+ifdef::use_tab_3[]
+{helm_tab_3_tab_text}::
++
+--
+xref:deployment/container/orchestration/tab-pages/breaking-changes.adoc#{helm_tab_3_tab_text}[Breaking Changes,window=_blank]
+--
+endif::[]
+====
 
 === Get the Chart
 
