--- a/modules/ROOT/pages/deployment/services/s-list/gateway.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/gateway.adoc
@@ -14,6 +14,29 @@
 
 * Gateway listens on port 9142 by default.
 
+== Caching
+
+The `gateway` service can use a configured store via `GATEWAY_CACHE_STORE`. Possible stores are:
+
+[width=100%,cols="15%,85%",options=header]
+|===
+| Store Type
+| Description
+
+| `memory`
+| Basic in-memory store and the default.
+
+| `Redis`
+| Stores data in a configured Redis cluster.
+
+| `etcd`
+| Stores data in a configured etcd cluster.
+|===
+
+1. Note that in-memory stores are by nature not reboot persistent.
+2. Though usually not necessary, a database name and a database table can be configured for event stores if the event store supports this. Generally, this does not apply to stores of type `in-memory`. These settings are blank by default which means that the standard settings of the configured store applies.
+3. The `gateway` service can be scaled if not using `in-memory` stores and the stores are configured identically over all instances.
+
 == Configuration
 
 include::partial$deployment/services/env-and-yaml.adoc[]
